--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       href="/images/favicon_light.png"
       media="(prefers-color-scheme: dark)"
     />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
